--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "dev:setup": "bash scripts/setup.sh",
     "db:migrate": "prisma migrate dev",
@@ -32,55 +32,61 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "typescript": "^5.4.0",
-    "@prisma/client": "^5.14.0",
-    "next-auth": "^5.0.0-beta.18",
     "@auth/prisma-adapter": "^2.0.0",
-    "zod": "^3.23.0",
-    "zustand": "^4.5.0",
-    "react-hook-form": "^7.51.0",
     "@hookform/resolvers": "^3.3.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.3.0",
-    "lucide-react": "^0.379.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@prisma/client": "^5.14.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-avatar": "^1.0.4",
+    "@sentry/nextjs": "^8.5.0",
     "@supabase/supabase-js": "^2.43.0",
-    "pusher-js": "^8.4.0-rc2",
+    "autoprefixer": "^10.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.379.0",
+    "next": "^14.2.0",
+    "next-auth": "^5.0.0-beta.18",
+    "postcss": "^8.4.0",
     "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-hook-form": "^7.51.0",
     "resend": "^3.2.0",
-    "@sentry/nextjs": "^8.5.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.4.0",
+    "zod": "^3.23.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.44.0",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^15.0.0",
     "@types/node": "^20.12.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "prisma": "^5.14.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
-    "prettier": "^3.2.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.0.0",
-    "lint-staged": "^15.2.0",
-    "@testing-library/react": "^15.0.0",
-    "@testing-library/jest-dom": "^6.4.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@playwright/test": "^1.44.0"
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.2.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prisma": "^5.14.0"
   },
   "engines": {
     "node": ">=18.0.0",
