--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@sentry/nextjs": "^8.5.0",
     "@supabase/supabase-js": "^2.43.0",
     "autoprefixer": "^10.4.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.379.0",
@@ -68,6 +69,7 @@
     "@playwright/test": "^1.44.0",
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^15.0.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.12.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
@@ -87,7 +89,11 @@
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.14.0"
+    "prisma": "^5.14.0",
+    "tsx": "^4.21.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "engines": {
     "node": ">=18.0.0",
