feat(sop-201): implement authentication with OAuth primary and email/password fallback
- Configure NextAuth.js v5 with Google and Apple OAuth (primary)
- Add credentials provider for email/password fallback
- Create password hashing utilities (bcryptjs, 12 rounds)
- Implement user registration endpoint with validation
- Create protected route utilities for server components and API routes
- Add session management hooks for client components
- Sync OAuth provider info to User model via signIn event
- Auto-create UserPreferences for new users (OAuth or credentials)
- Extend NextAuth types for type-safe sessions
- Update environment variables documentation
- Fix ESLint configuration to ignore underscore-prefixed variables

--- a/.env.example
+++ b/.env.example
@@ -24,18 +24,23 @@ NEXTAUTH_SECRET=your-nextauth-secret-here-replace-this-with-random-string
 # Application base URL
 NEXTAUTH_URL=http://localhost:3000
 
-# OAuth Providers (Optional)
 # Google OAuth
+# Setup: https://console.cloud.google.com/ → APIs & Services → Credentials
+# Callback URL: {NEXTAUTH_URL}/api/auth/callback/google
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# GitHub OAuth
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-
-# Apple OAuth (for iOS native feel)
+# Apple OAuth
+# Setup: https://developer.apple.com/ → Certificates, IDs & Profiles
+# Callback URL: {NEXTAUTH_URL}/api/auth/callback/apple
 APPLE_CLIENT_ID=
 APPLE_CLIENT_SECRET=
+
+# GitHub OAuth -- Optional for (developers who prefer GitHub login)
+# Setup: https://github.com/settings/developers
+# Callback URL: {NEXTAUTH_URL}/api/auth/callback/github
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
 # ===========================================
 # Supabase (Database, Auth, Storage, Real-time)
