--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.379.0",
+    "nanoid": "^5.1.6",
     "next": "^14.2.0",
     "next-auth": "^5.0.0-beta.18",
     "postcss": "^8.4.0",
