--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
     "docker:tools": "docker-compose --profile tools up -d",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
     "prepare": "husky install"
   },
@@ -85,9 +85,9 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
+    "vitest": "^1.2.0",
+    "@vitest/coverage-v8": "^1.2.0",
     "prettier": "^3.2.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
