--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.44.0",
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^15.0.0",
     "@types/bcryptjs": "^3.0.0",
@@ -76,6 +78,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "@vitest/coverage-v8": "^1.2.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
     "eslint-config-prettier": "^10.1.8",
@@ -86,12 +89,12 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.0.0",
     "lint-staged": "^15.2.0",
-    "vitest": "^1.2.0",
-    "@vitest/coverage-v8": "^1.2.0",
+    "next-themes": "^0.4.6",
     "prettier": "^3.2.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "vitest": "^1.2.0"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
