--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "nanoid": "^5.1.6",
     "next": "^14.2.0",
     "next-auth": "^5.0.0-beta.18",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
@@ -62,6 +63,7 @@
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.51.0",
     "resend": "^3.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
@@ -91,7 +93,6 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.0.0",
     "lint-staged": "^15.2.0",
-    "next-themes": "^0.4.6",
     "prettier": "^3.2.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
